--- a/src/index.html
+++ b/src/index.html
@@ -73,8 +73,8 @@
               </a>
 
             </h4>
-            <p class="sub-heading">Streamit is a playlist maker for video content from Reddit.</p>
-            <p>Queue up all the videos from favorite subreddit for a simplified viewing experience.</p>
+            <p class="sub-heading">Streamit is a playlist maker for Reddit video content.</p>
+            <p>Queue up all the videos from your favorite subreddits for a simplified viewing experience.</p>
             <p>It features a clean UI and leverages the Web Storage API to remember the most recently visited
               subreddits.</p>
           </section>
