FEAT: update featured projects

--- a/src/index.html
+++ b/src/index.html
@@ -67,16 +67,15 @@
 
           <section class="project">
             <h4>
-              <a href="https://streamit.space"
-                class="streamit"
-                target="_blank">Streamit <span>👉</span>
+              <a href="https://popcover.pro"
+                class="pop-cover"
+                target="_blank">Pop Cover <span>👉</span>
               </a>
 
             </h4>
-            <p class="sub-heading">Streamit is a playlist maker for Reddit video content.</p>
-            <p>Queue up all the videos from your favorite subreddits for a simplified viewing experience.</p>
-            <p>It features a clean UI and leverages the Web Storage API to remember the most recently visited
-              subreddits.</p>
+            <p class="sub-heading">Pop Cover creates Spotify playlist cover art.</p>
+            <p>It creates playlists that are inspired by Spotify's "This is" playlist series.</p>
+            <p>Pop Cover is built with serverless functions, JWT based authentication, and the HTML Canvas API.</p>
           </section>
 
           <section class="project">
