--- a/src/index.html
+++ b/src/index.html
@@ -78,13 +78,13 @@
 
           <section class="project">
             <h4>
-              <a href="https://github.com/johnsylvain/kobra"
+              <a href="https://kobra.js.org"
                 class="kobra"
                 target="_blank">Kobra <span>👉</span>
               </a>
             </h4>
             <p class="sub-heading">Kobra is a minimal JavaScript framework.</p>
-            <p>It includes a built-in router, Redux style actions/state management, and a small bundle size (~2.6 kb
+            <p>It includes a built-in router, Redux style actions/state management, and a small bundle size (~2.7 kb
               gzipped).</p>
             <p>Kobra is inspired by the ELM architecture and is designed to be an approachable and lightweight
               framework solution.</p>
