FEAT: clean up sass style sheets

--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,7 @@
               I'm John, a passionate software engineer focused on creating beautiful and performant JavaScript web
               applications.
             </p>
-            <p>Currently, I develop consumer web products at
+            <p>Currently, I develop web products at
               <a href="https://rocketmiles.com"
                 class="link"
                 target="_blank">Rocketmiles</a>.
