FEAT: make console always scroll to bottom

--- a/src/index.html
+++ b/src/index.html
@@ -46,7 +46,7 @@
             </p>
             <p class="content__body">Currently, I develop the core frontend web infrastructure at
               <a href="https://rocketmiles.com"
-                class="content__link"
+                class="content__link content__link--red"
                 target="_blank">Rocketmiles</a>.
             </p>
           </section>
