FEAT: fix lighthouse issues

--- a/src/index.html
+++ b/src/index.html
@@ -47,6 +47,7 @@
             <p class="content__body">Currently, I develop the core frontend web infrastructure at
               <a href="https://rocketmiles.com"
                 class="content__link content__link--red"
+                rel="noopener"
                 target="_blank">Rocketmiles</a>.
             </p>
           </section>
@@ -55,6 +56,7 @@
             <h4 class="content__title">
               <a href="https://slackcolors.com"
                 class="content__link content__link--green"
+                rel="noopener"
                 target="_blank">Slack Colors</a>
               <span>🎨</span>
             </h4>
@@ -69,6 +71,7 @@
             <h4 class="content__title">
               <a href="https://popcover.pro"
                 class="content__link content__link--purple"
+                rel="noopener"
                 target="_blank">Pop Cover</a>
               <span>🎉</span>
             </h4>
@@ -82,6 +85,7 @@
             <h4 class="content__title">
               <a href="https://kobra.js.org"
                 class="content__link content__link--blue"
+                rel="noopener"
                 target="_blank">Kobra</a>
               <span>🐍</span>
             </h4>
@@ -98,25 +102,31 @@
         <footer class="footer">
           <div class="footer__item">
             <strong>&copy; 2019</strong>
-            <a href="https://johnsylvain.me">John Sylvain</a>
+            <a rel="noopener"
+              href="https://johnsylvain.me">John Sylvain</a>
           </div>
           <div class="footer__item">
             <strong>Social</strong>
             <a href="https://github.com/johnsylvain"
+              rel="noopener"
               target="_blank">GitHub</a> /
             <a href="https://linkedin.com/in/johnsylvain"
+              rel="noopener"
               target="_blank">LinkedIn</a>
           </div>
           <div class="footer__item">
             <strong>Music</strong>
             <a href="https://music.sylvain.win"
+              rel="noopener"
               target="_blank">Discography</a> /
             <a href="https://soundcloud.com/johnsylvain"
+              rel="noopener"
               target="_blank">SoundCloud</a>
           </div>
           <div class="footer__item">
             <strong>Words</strong>
             <a href="https://blog.johnsylvain.me"
+              rel="noopener"
               target="_blank">Blog</a>
           </div>
         </footer>
