FEAT: add fileary project

--- a/src/index.html
+++ b/src/index.html
@@ -54,6 +54,20 @@
 
           <section class="content">
             <h4 class="content__title">
+              <a href="https://fileary.com"
+                class="content__link content__link--purple"
+                rel="noopener"
+                target="_blank">Fileary</a>
+              <span>🗄</span>
+            </h4>
+            <p class="content__subtitle">Securely share files.</p>
+            <p class="content__body">It compresses files and generates a secure, password protected link that
+              automatically expires.</p>
+            <p class="content__body">Fileary is built with Apollo Server, GraphQL, Firebase, AWS S3, and React.</p>
+          </section>
+
+          <section class="content">
+            <h4 class="content__title">
               <a href="https://slackcolors.com"
                 class="content__link content__link--green"
                 rel="noopener"
