--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,8 @@
               I'm John, a passionate software engineer focused on creating beautiful and performant web
               applications.
             </p>
-            <p class="content__body">Currently, I develop the core frontend web infrastructure at
+            <p class="content__body">Currently, I'm a Senior Frontend Engineer working on something new.
+              Previously at
               <a href="https://rocketmiles.com"
                 class="content__link content__link--red"
                 rel="noopener"
@@ -104,9 +105,8 @@
               <span>🐍</span>
             </h4>
             <p class="content__subtitle">Kobra is a minimal JavaScript framework.</p>
-            <p class="content__body">It includes a built-in router, Redux style actions/state management, and a small
-              bundle size (~2.7 kb
-              gzipped).</p>
+            <p class="content__body">It includes a built-in router, simple action-based state management, and a small
+              bundle size (~2.7 kb gzipped).</p>
             <p class="content__body">Kobra is inspired by the ELM architecture and is designed to be an approachable and
               lightweight
               framework solution.</p>
@@ -130,12 +130,12 @@
           </div>
           <div class="footer__item">
             <strong>Music</strong>
-            <a href="https://music.sylvain.win"
+            <a href="https://johnmintonline.com"
               rel="noopener"
-              target="_blank">Discography</a> /
-            <a href="https://soundcloud.com/johnsylvain"
+              target="_blank">Artist Website</a> /
+            <a href="https://open.spotify.com/artist/4nEeXjmnkJHJG6xrRBK0bp?si=seeluGBiSgeUzljanrjT8w"
               rel="noopener"
-              target="_blank">SoundCloud</a>
+              target="_blank">Spotify</a>
           </div>
           <div class="footer__item">
             <strong>Words</strong>
@@ -175,7 +175,8 @@
     ga('send', 'pageview');
   </script>
   <script src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>
-  <script src="./index.js"></script>
+  <script async
+    src="./index.js"></script>
 </body>
 
 </html>
