--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
   <meta name="author"
     content="John Sylvain">
   <link rel="icon"
-    href="assets/favicon.png" />
+    href="assets/favicon.ico" />
   <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro"
     rel="stylesheet">
   <link rel="stylesheet"
