--- a/src/index.html
+++ b/src/index.html
@@ -175,6 +175,7 @@
     ga('send', 'pageview');
   </script>
   <script src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>
+  <script async defer data-website-id="9e0b8583-1caf-4c3b-a6a7-ff67c15f05b5" src="https://umami.sylvain.win/umami.js"></script>
   <script async
     src="./index.js"></script>
 </body>
