update bio text

--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,10 @@
               I'm John, a passionate software engineer focused on creating beautiful and performant web
               applications.
             </p>
-            <p class="content__body">Currently, I'm a Senior Frontend Engineer working on something new.
+            <p class="content__body">Currently, I'm a Senior Frontend Engineer at <a href="https://codacollection.co"
+                class="content__link content__link--cyan"
+                rel="noopener"
+                target="_blank">The Coda Collection</a>.
               Previously at
               <a href="https://rocketmiles.com"
                 class="content__link content__link--red"
@@ -175,7 +178,10 @@
     ga('send', 'pageview');
   </script>
   <script src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>
-  <script async defer data-website-id="9e0b8583-1caf-4c3b-a6a7-ff67c15f05b5" src="https://umami.sylvain.win/umami.js"></script>
+  <script async
+    defer
+    data-website-id="9e0b8583-1caf-4c3b-a6a7-ff67c15f05b5"
+    src="https://umami.sylvain.win/umami.js"></script>
   <script async
     src="./index.js"></script>
 </body>
