--- a/src/index.html
+++ b/src/index.html
@@ -4,18 +4,13 @@
 <head>
   <meta charset="UTF-8">
   <title>John Sylvain &#8226; Software Engineer</title>
-  <meta name="viewport"
-    content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description"
     content="I am a software engineer focused on creating performant JavaScript web applications and developer tools.">
-  <meta name="author"
-    content="John Sylvain">
-  <link rel="icon"
-    href="assets/favicon.ico" />
-  <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro"
-    rel="stylesheet">
-  <link rel="stylesheet"
-    href="./styles/style.scss">
+  <meta name="author" content="John Sylvain">
+  <link rel="icon" href="assets/favicon.ico" />
+  <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet">
+  <link rel="stylesheet" href="./styles/style.scss">
 </head>
 
 <body>
@@ -28,12 +23,8 @@
             <p class="header__subtitle">Software Engineer</p>
           </div>
           <nav class="nav mobile-hide">
-            <a data-to="/"
-              data-to-active-class="nav__link--active"
-              class="active nav__link">Projects</a>
-            <a data-to="/resume"
-              data-to-active-class="nav__link--active"
-              class="nav__link">Resume</a>
+            <a data-to="/" data-to-active-class="nav__link--active" class="active nav__link">Projects</a>
+            <a data-to="/resume" data-to-active-class="nav__link--active" class="nav__link">Resume</a>
           </nav>
         </header>
 
@@ -44,23 +35,22 @@
               I'm John, a passionate software engineer focused on creating beautiful and performant web
               applications.
             </p>
-            <p class="content__body">Currently, I'm a Senior Frontend Engineer at <a href="https://codacollection.co"
-                class="content__link content__link--cyan"
+            <p class="content__body">Currently, I'm a Senior Software Engineer at 
+              <a href="https://myvintro.com"
+                class="content__link content__link--dark-blue"
                 rel="noopener"
-                target="_blank">The Coda Collection</a>.
+                target="_blank">Vintro</a>.
               Previously at
-              <a href="https://rocketmiles.com"
-                class="content__link content__link--red"
-                rel="noopener"
+              <a href="https://codacollection.co" class="content__link content__link--cyan" rel="noopener"
+                target="_blank">The Coda Collection</a> and
+              <a href="https://rocketmiles.com" class="content__link content__link--red" rel="noopener"
                 target="_blank">Rocketmiles</a>.
             </p>
           </section>
 
           <section class="content">
             <h4 class="content__title">
-              <a href="https://fileary.com"
-                class="content__link content__link--purple"
-                rel="noopener"
+              <a href="https://fileary.com" class="content__link content__link--purple" rel="noopener"
                 target="_blank">Fileary</a>
               <span>🗄</span>
             </h4>
@@ -72,9 +62,7 @@
 
           <section class="content">
             <h4 class="content__title">
-              <a href="https://slackcolors.com"
-                class="content__link content__link--green"
-                rel="noopener"
+              <a href="https://slackcolors.com" class="content__link content__link--green" rel="noopener"
                 target="_blank">Slack Colors</a>
               <span>🎨</span>
             </h4>
@@ -87,9 +75,7 @@
 
           <section class="content">
             <h4 class="content__title">
-              <a href="https://popcover.pro"
-                class="content__link content__link--purple"
-                rel="noopener"
+              <a href="https://popcover.pro" class="content__link content__link--purple" rel="noopener"
                 target="_blank">Pop Cover</a>
               <span>🎉</span>
             </h4>
@@ -101,9 +87,7 @@
 
           <section class="content">
             <h4 class="content__title">
-              <a href="https://kobra.js.org"
-                class="content__link content__link--blue"
-                rel="noopener"
+              <a href="https://kobra.js.org" class="content__link content__link--blue" rel="noopener"
                 target="_blank">Kobra</a>
               <span>🐍</span>
             </h4>
@@ -119,32 +103,22 @@
         <footer class="footer">
           <div class="footer__item">
             <strong>&copy; 2020</strong>
-            <a rel="noopener"
-              href="https://johnsylvain.me">John Sylvain</a>
+            <a rel="noopener" href="https://johnsylvain.me">John Sylvain</a>
           </div>
           <div class="footer__item">
             <strong>Social</strong>
-            <a href="https://github.com/johnsylvain"
-              rel="noopener"
-              target="_blank">GitHub</a> /
-            <a href="https://linkedin.com/in/johnsylvain"
-              rel="noopener"
-              target="_blank">LinkedIn</a>
+            <a href="https://github.com/johnsylvain" rel="noopener" target="_blank">GitHub</a> /
+            <a href="https://linkedin.com/in/johnsylvain" rel="noopener" target="_blank">LinkedIn</a>
           </div>
           <div class="footer__item">
             <strong>Music</strong>
-            <a href="https://johnmintonline.com"
-              rel="noopener"
-              target="_blank">Artist Website</a> /
-            <a href="https://open.spotify.com/artist/4nEeXjmnkJHJG6xrRBK0bp?si=seeluGBiSgeUzljanrjT8w"
-              rel="noopener"
+            <a href="https://johnmintonline.com" rel="noopener" target="_blank">Artist Website</a> /
+            <a href="https://open.spotify.com/artist/4nEeXjmnkJHJG6xrRBK0bp?si=seeluGBiSgeUzljanrjT8w" rel="noopener"
               target="_blank">Spotify</a>
           </div>
           <div class="footer__item">
             <strong>Words</strong>
-            <a href="https://blog.johnsylvain.me"
-              rel="noopener"
-              target="_blank">Blog</a>
+            <a href="https://blog.johnsylvain.me" rel="noopener" target="_blank">Blog</a>
           </div>
         </footer>
       </div>
@@ -153,12 +127,10 @@
   </div>
 
   <div class="trash">
-    <img src="assets/trash.png"
-      alt="" />
+    <img src="assets/trash.png" alt="" />
   </div>
   <div class="trash trash__front">
-    <img src="assets/trash-front.png"
-      alt="" />
+    <img src="assets/trash-front.png" alt="" />
   </div>
 
   <script>
@@ -178,12 +150,9 @@
     ga('send', 'pageview');
   </script>
   <script src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>
-  <script async
-    defer
-    data-website-id="9e0b8583-1caf-4c3b-a6a7-ff67c15f05b5"
+  <script async defer data-website-id="9e0b8583-1caf-4c3b-a6a7-ff67c15f05b5"
     src="https://umami.sylvain.win/umami.js"></script>
-  <script async
-    src="./index.js"></script>
+  <script async src="./index.js"></script>
 </body>
 
 </html>
