--- a/src/index.html
+++ b/src/index.html
@@ -58,7 +58,7 @@
 
         <footer class="footer">
           <div class="footer__item">
-            <strong>&copy; <script>document.write(new Date().getFullYear())</script></strong>
+            <strong>&copy; <span id="date"></span><script type="text/javascript">document.getElementById('date').innerText(new Date().getFullYear())</script></strong>
             <a rel="noopener" href="https://johnsylvain.me">John Sylvain</a>
           </div>
           <div class="footer__item">
